--- a/scss/components/__mainnav.scss
+++ b/scss/components/__mainnav.scss
@@ -23,6 +23,7 @@
 
         @media screen and (max-width: $bp-LG) {
             flex-direction: column;
+            padding-left: 0;
         }
 
         &__item {
